[package]
name = "chaostomato"
version = "1.0.1"
authors = ["Lara <lumi@uwu.is>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.6"
tbot = "0.6.6"
tokio = { version = "0.2", features = ["macros"] }
chrono = "0.4.19"
